Change HomeWork